RESOLVED FIXED293246
tympanus.net/Tutorials/WebGPUFluid/ is slower in Safari than Chrome
https://bugs.webkit.org/show_bug.cgi?id=293246
Summary tympanus.net/Tutorials/WebGPUFluid/ is slower in Safari than Chrome
Mike Wyrzykowski
Reported 2025-05-19 13:51:19 PDT
tympanus.net/Tutorials/WebGPUFluid/ is slower in MiniBrowser / Safari than Chrome on the same Mac across a variety of Macs: M1 MBP, M2 MBP, etc I captured some CPU traces and GPU traces and it appears this example is GPU limited on M2 and M1 Macs at least. I think it is related to a compute kernel which could be optimized, still investigating
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-19 16:59:55 PDT
Mike Wyrzykowski
Comment 2 2025-05-19 17:03:04 PDT
EWS
Comment 3 2025-05-21 09:15:40 PDT
Committed 295207@main (f749a8e371aa): <https://commits.webkit.org/295207@main> Reviewed commits have been landed. Closing PR #45622 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.