tympanus.net/Tutorials/WebGPUFluid/ is slower in Safari than Chrome https://bugs.webkit.org/show_bug.cgi?id=293246 rdar://151652082

Reviewed by Tadeu Zagallo.

Allow Metal to choose the optimal value, we don't need to set it ourselves.

* Source/WebGPU/WebGPU/ComputePipeline.mm:
(WebGPU::createComputePipelineState):

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::crashGPUProcess):
(WebGPU::Queue::commitMTLCommandBuffer):
Fix GPU process crash observed in EWS run of this PR.

Make backtrace include the error code to more easily diagnose
which error code is triggering.

Canonical link: https://commits.webkit.org/295207@main